Fix nvim folder, add oh-my-zsh ignore to stow, include zcompdump in zshrc

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -15,6 +15,9 @@ _darcs
 \.gitignore
 \.gitmodules
 
+# ignore oh my zsh theme to be added after installation
+\.oh-my-zsh
+
 .+~          # emacs backup files
 \#.*\#       # emacs autosave files
 
